# kong-rust-pdk

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  kong.conf  kong.conf.default  kong.yml
.github/workflows/: docker-image.yml
examples/: Cargo.toml
examples/src/helloworld/: main.rs
kong-mock/: Cargo.toml
kong-mock/src/: main.rs
kong-rust-pdk/: Cargo.toml  build.rs
kong-rust-pdk-macro/: Cargo.toml
kong-rust-pdk-macro/src/: lib.rs
kong-rust-pdk-proto/: Cargo.toml  build.rs
kong-rust-pdk-proto/src/: lib.rs
kong-rust-pdk-test/: Cargo.toml
kong-rust-pdk-test/src/: lib.rs  log.rs  pdk.rs  request.rs  response.rs
kong-rust-pdk/examples/: plugin.rs
kong-rust-pdk/proto/: pluginsocket.proto
kong-rust-pdk/src/: bridge.rs  client.rs  ctx.rs  ip.rs  lib.rs  log.rs  nginx.rs  node.rs  pdk.rs  request.rs  response.rs  router.rs  server.rs
kong-rust-pdk/src/request/: methods.rs  mod.rs
kong-rust-pdk/src/response/: methods.rs  mod.rs  pbserver.rs
kong-rust-pdk/src/server/: client.rs  info.rs  mod.rs  socket.rs
kong-rust-pdk/src/server/client/: bridge.rs  mod.rs
kong-rust-pdk/src/service/: mod.rs  request.rs  response.rs
kong-rust-pdk/src/stream/: bridge.rs  mod.rs  read.rs  write.rs
kong-rust-pdk/tests/: integration-tests.rs  simple-plugin-tests.rs
kong-rust-pdk/tests/common/: mod.rs
serde-prost-types/: Cargo.toml
serde-prost-types/src/: lib.rs
