[package]
name = "kong-rust-pdk-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld"
path = "src/helloworld/main.rs"

[dependencies]
kong-rust-pdk = { path = "../kong-rust-pdk" }
serde = "1.0"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
kong-rust-pdk-test = { path = "../kong-rust-pdk-test" }
