[package]
name = "kong-mock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kong-rust-pdk = { path = "../kong-rust-pdk" }

futures = "0.3"
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.11", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = "0.6"
