[package]
name = "kong-rust-pdk"
version = "0.1.0"
authors = ["jgram <jgramoll@gmail.com>"]
edition = "2018"


[dependencies]
macros = { package="kong-rust-pdk-macro", path = "../kong-rust-pdk-macro" }
pb = { package="kong-rust-pdk-proto", path = "../kong-rust-pdk-proto" }
serde-prost-types = { path = "../serde-prost-types" }

log = "0.4"
prost = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.11", features = ["macros", "net", "rt-multi-thread"] }
